--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     }
     .btn.gold { background: var(--gold); color: #000; }
     .btn.green { background: var(--green); color: #fff; border: 3.5px solid var(--gold); }
-    .btn.back { background: rgba(255,255,255,0.2); border: 2px solid #666; }
+    .btn.back { background: rgba(255,255,255,0.2); border: 2px solid #666; font-size: 1.2rem; padding: 0.8rem; }
     .btn:active { transform: scale(0.93); }
 
     .progress {
