--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       overflow-x: hidden;
       position: relative;
     }
-    .overlay {
-      position: fixed; inset: 0;
-      background: linear-gradient(135deg, rgba(0,0,0,0.15), rgba(0,155,72,0.25));
-      backdrop-filter: blur(6px);
-      z-index: 1;
-      pointer-events: none;
-    }
+  .overlay {
+  position: fixed; inset: 0;
+  background: linear-gradient(135deg, rgba(0,0,0,0.08), rgba(0,155,72,0.15)); /* ← MOONRISE VISIBLE */
+  backdrop-filter: blur(3px);
+  z-index: 1;
+  pointer-events: none;
+}
     .flag {
       position: fixed; top: 16px; left: 16px;
       width: 100px; height: 68px;
