--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    .flag {
   position: fixed; top: 16px; left: 16px;
   width: 100px; height: 68px;
-  background: url('/IMG_0454.JPEG.png') center/cover no-repeat;
+  background: url('/IMG_0454.png') center/cover no-repeat;
   mask-image: url('/flag-mask.png');
   mask-size: contain;
   mask-repeat: no-repeat;
