--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
       position: fixed; top: 16px; left: 16px;
       width: 100px; height: 68px;
       background: url('/IMG_0454.jpeg') center/cover no-repeat;
+      background-color: #000;
       animation: waveFlow 3s ease-in-out infinite;
       z-index: 10;
       border-radius: 4px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
-      pointer-events: none;
+      pointer-events: auto;
     }
     .flag::after {
       content: "JAM"; font-weight: 900; font-size: 1.2rem;
