--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       pointer-events: auto;
     }
     .flag::after {
-      content: "JAM"; font-weight: 900; font-size: 1.2rem;
+      content: "1Drop"; font-weight: 900; font-size: 1.2rem;
       position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
       color: #fff; text-shadow: 0 0 4px #000; opacity: 0.8;
       display: none;
