--- a/index.html
+++ b/index.html
@@ -178,7 +178,10 @@
 
   <div class="container">
     <div class="header">
-      <h1 class="logo">YAAD<br>VIBE</h1>
+      <h1 class="logo">
+  <span>YAAD</span><br>
+  <span>VIBE</span>
+</h1>
       <div class="calc">Total: $<span id="liveTotal">0.00</span></div>
       <div class="progress" id="progress"></div>
     </div>
