--- a/index.html
+++ b/index.html
@@ -109,10 +109,15 @@
     .calc.animate { animation: countUp 0.6s ease-out; }
     @keyframes countUp { 0% { transform: scale(1); } 50% { transform: scale(1.15); } 100% { transform: scale(1); } }
 
-    .msg {
-      font-size: 1.55rem; font-weight: 600; text-align: center;
-      max-width: 90%; margin: 0.7rem 0 1.7rem; line-height: 1.48;
-    }
+   .msg {
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #FFD700;
+  text-shadow: 0 0 10px #000;
+  margin-top: 17vh;
+  max-width: 82%;
+  text-align: center;
+}
     .btn {
       width: 88dvw; max-width: 370px; padding: 1.45rem;
       border-radius: 22px; font-size: 1.45rem; font-weight: 700;
