--- a/index.html
+++ b/index.html
@@ -128,7 +128,19 @@
     }
     .btn.gold { background: var(--gold); color: #000; }
     .btn.green { background: var(--green); color: #fff; border: 3.5px solid var(--gold); }
-    .btn.back { background: rgba(255,255,255,0.2); border: 2px solid #666; font-size: 1.2rem; padding: 0.8rem; }
+    .btn.back {
+  background: rgba(0,0,0,0.65);
+  border: 2px solid #FFD700;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 3px 12px rgba(0,0,0,0.4);
+  cursor: pointer;
+}
     .btn:active { transform: scale(0.93); }
 
     .progress {
