--- a/index.html
+++ b/index.html
@@ -141,6 +141,19 @@
   box-shadow: 0 3px 12px rgba(0,0,0,0.4);
   cursor: pointer;
 }
+    #startBtn {
+  background: linear-gradient(135deg, #0A3D62, #006400, #004D40);
+  color: #FFD700;
+  font-weight: 900;
+  font-size: 1.3rem;
+  padding: 12px 28px;
+  border-radius: 28px;
+  border: 2.5px solid #FFD700;
+  width: 200px;
+  margin: 1.2rem auto;
+  box-shadow: 0 7px 22px rgba(0,77,64,0.6);
+  cursor: pointer;
+}
     .btn:active { transform: scale(0.93); }
 
     .progress {
