--- a/index.html
+++ b/index.html
@@ -128,18 +128,35 @@
     }
     .btn.gold { background: var(--gold); color: #000; }
     .btn.green { background: var(--green); color: #fff; border: 3.5px solid var(--gold); }
-    .btn.back {
-  background: rgba(0,0,0,0.65);
-  border: 2px solid #FFD700;
+.btn.back {
+  position: fixed;
+  top: 50px;
+  left: 16px;
+  background: rgba(0,0,0,0.7);
+  border: 2.5px solid #FFD700;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  padding: 0;
+  width: 44px;
+  height: 44px;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 3px 12px rgba(0,0,0,0.4);
+  box-shadow: 0 4px 16px rgba(0,0,0,0.5);
+  z-index: 100;
   cursor: pointer;
+  transition: all 0.3s ease;
+}
+.btn.back:hover {
+  background: #FFD700;
+  transform: scale(1.05);
+}
+.btn.back svg {
+  width: 20px;
+  height: 20px;
+  stroke: #FFD700;
+  stroke-width: 3;
+}
+.btn.back:hover svg {
+  stroke: #000;
 }
     #startBtn {
   background: linear-gradient(135deg, #0A3D62, #006400, #004D40);
