--- a/index.html
+++ b/index.html
@@ -292,7 +292,11 @@
 
     <!-- STEP 2 -->
     <div id="step2" class="step">
-      <button class="btn back" id="back2">Back</button>
+      <button class="btn back" onclick="goBack()">
+  <svg viewBox="0 0 24 24" fill="none">
+    <path d="M19 12H5M12 19l-7-7 7-7" />
+  </svg>
+</button>
       <p class="msg">Where are you traveling from?</p>
       <select id="fromCity">
         <option value="">Select City</option>
