--- a/index.html
+++ b/index.html
@@ -297,6 +297,10 @@
     <path d="M19 12H5M12 19l-7-7 7-7" />
   </svg>
 </button>
+  <svg viewBox="0 0 24 24" fill="none">
+    <path d="M19 12H5M12 19l-7-7 7-7" />
+  </svg>
+</button>
       <p class="msg">Where are you traveling from?</p>
       <select id="fromCity">
         <option value="">Select City</option>
