--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
   -webkit-text-fill-color: transparent;
   filter: drop-shadow(0 0 20px #FFD700);
 }
+   .logo span {
+  animation: fyahPulse 3s ease-in-out infinite alternate;
+}
+@keyframes fyahPulse {
+  0% { filter: drop-shadow(0 0 15px #FF4500); }
+  100% { filter: drop-shadow(0 0 25px #FFD700); }
+} 
    .calc {
   position: relative;
   background: rgba(0,0,0,0.85);
