--- a/index.html
+++ b/index.html
@@ -287,7 +287,9 @@
     <!-- STEP 2 -->
     <div id="step2" class="step">
       <button class="btn back" onclick="goBack()">
-  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+  <path d="M19 12H5M12 19l-7-7 7-7" />
+</svg>
     <path d="M19 12H5M12 19l-7-7 7-7" />
   </svg>
 </button>
