--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
     .btn.green { background: var(--green); color: #fff; border: 3.5px solid var(--gold); }
 .btn.back {
   position: fixed;
-  top: 85px;     /* ← MOVED DOWN */
-  left: 20px;    /* ← SLIGHT RIGHT */
-  background: rgba(0,0,0,0.7);
+  top: 85px;
+  left: 20px;
+  background: rgba(0, 0, 0, 0.7);
   border: 2.5px solid #FFD700;
   border-radius: 50%;
   width: 44px;
@@ -160,10 +160,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.5);
-  z-index: 100;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
+  z-index: 9999 !important;
   cursor: pointer;
   transition: all 0.3s ease;
+  transform: translateZ(0); /* ← HARDWARE ACCELERATION */
 }
     .btn:active { transform: scale(0.93); }
 
