--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@
     .btn.green { background: var(--green); color: #fff; border: 3.5px solid var(--gold); }
 .btn.back {
   position: fixed;
-  top: 85px;
-  left: 20px;
-  background: rgba(0, 0, 0, 0.7);
+  top: 88px;           /* ← Aligns with "E" in VIBE */
+  right: 20px;         /* ← Opposite from flag */
+  left: auto;
+  background: transparent;
   border: 2.5px solid #FFD700;
   border-radius: 50%;
   width: 44px;
@@ -160,11 +161,22 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   z-index: 9999 !important;
   cursor: pointer;
   transition: all 0.3s ease;
-  transform: translateZ(0); /* ← HARDWARE ACCELERATION */
+  padding: 0;
+}
+.btn.back:hover {
+  background: rgba(255, 215, 0, 0.2);
+  transform: scale(1.08);
+}
+.btn.back svg {
+  width: 20px;
+  height: 20px;
+  stroke: #FFD700;
+  stroke-width: 3;
+  fill: none;
 }
     .btn:active { transform: scale(0.93); }
 
